@@ -51,6 +51,9 @@ namespace ArkaneSystems.WindowsSubsystemForLinux.Genie
 
         // Seconds to wait for systemd to enter the running state on startup.
         internal int SystemdStartupTimeout => this.Configuration.GetValue<int> ("genie:systemd-timeout", 180);
+
+        // True to bind mount WSLg X server socket in tmp, false otherwise.
+        internal bool MountXSocket => this.Configuration.GetValue<bool> ("genie:mount-x-socket", true);
         
         // Get the installation-dependent path for a given file.
         internal string GetPrefixedPath (string path) => Path.Combine (GenieConfig.Prefix, path);
