@@ -2,7 +2,7 @@
 # Contributor: facekapow, rayfalling, Ducksoft
 
 pkgname=genie-systemd
-pkgver=1.37
+pkgver=1.38
 pkgrel=1
 pkgdesc="A quick way into a systemd \"bottle\" for WSL"
 arch=('x86_64')
@@ -25,6 +25,7 @@ package() {
   # Binaries
   install -Dm 4755 -o root "../binsrc/genie/bin/Release/net5.0/linux-x64/publish/genie" -t "${pkgdir}/usr/libexec/genie"
   install -Dm 0755 -o root "../binsrc/runinwsl/bin/Release/net5.0/linux-x64/publish/runinwsl" -t "${pkgdir}/usr/libexec/genie"
+  install -Dm 0755 -o root "../othersrc/scripts/bindxsocket.sh" -t "${pkgdir}/usr/libexec/genie"
 
   # Environment generator.
   install -Dm 0755 -o root "../othersrc/scripts/10-genie-envar.sh" -t "${pkgdir}/usr/libexec/genie"
