@@ -31,6 +31,7 @@ package-inner:
 	mkdir -p "$(BINDIR)"
 	install -Dm 4755 -o root "binsrc/genie/bin/Release/net5.0/linux-x64/publish/genie" -t "$(INSTALLDIR)"
 	install -Dm 0755 -o root "binsrc/runinwsl/bin/Release/net5.0/linux-x64/publish/runinwsl" -t "$(INSTALLDIR)"
+	install -Dm 0755 -o root "othersrc/scripts/bindxsocket.sh" -t "$(INSTALLDIR)"
 
 	# Environment generator.
 	install -Dm 0755 -o root "othersrc/scripts/10-genie-envar.sh" -t "$(INSTALLDIR)"
