@@ -35,6 +35,7 @@ package-inner:
 	mkdir -p "$(BINDIR)"
 	install -Dm 4755 -o root "binsrc/genie/bin/Release/net5.0/linux-x64/publish/genie" -t "$(INSTALLDIR)"
 	install -Dm 0755 -o root "binsrc/runinwsl/bin/Release/net5.0/linux-x64/publish/runinwsl" -t "$(INSTALLDIR)"
+	install -Dm 0755 -o root "othersrc/scripts/bindxsocket.sh" -t "$(INSTALLDIR)"
 	ln -s ../libexec/genie/genie $(BINDIR)/genie
 
 	# Environment generator.
