@@ -1,3 +1,10 @@
+systemd-genie (1.38) buster bullseye bookworm sid focal bionic; urgency=medium
+
+        * Restored original default systemd startup timeout.
+        * Changes to support WSLg.
+
+ -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 14:32:00 -0500
+
 systemd-genie (1.37) buster bullseye bookworm sid focal bionic; urgency=medium
 
         * Reduced default systemd startup timeout to 60s.
